fixed: 8 pixels of space between Social Media icons, right align group w/ edge of the site (center vertically w/ Search bar)

--- a/drupal/profiles/takepart/themes/takepart3/css/style.css
+++ b/drupal/profiles/takepart/themes/takepart3/css/style.css
@@ -570,7 +570,7 @@ ul#top-follow li a {
 }
 
 ul#top-follow {
-    margin: 19px 0 0 0;
+    margin: 20px 0 0;
     float: right;
 }
 
